# jotp

./: .act.config.yaml  .actrc  .dockerignore  .env.cloud.example  .env.example  .env.jotp.example  .env.template  .gitignore  .gitmodules  AGENT5-COMPLETION-SUMMARY.md  AGI-SCALE-PERFORMANCE-BREAKING-POINTS-ANALYSIS.md  AI_SYSTEM_INDEX.md  BUILD_SUMMARY.md  BenchmarkList  CHANGELOG.md  CHAOS-ENGINEERING-EXECUTIVE-SUMMARY.md  CHAOS-ENGINEERING-REPORT.md  CHAOS-TEST-EXECUTION-PLAN.md  CLAUDE.md  CLOUD-DOCS-EXECUTION-SUMMARY.md  CRASH-RECOVERY-TESTING-REPORT.md  CompilerHints  Containerfile  Containerfile.dev  Containerfile.full  Containerfile.minimal  DELIVERABLES.md  DELIVERY_REPORT.md  DISABLED-TESTS.md  DISTRIBUTED-CONSISTENCY-ANALYSIS.md  DISTRIBUTED-EXAMPLES-VERIFICATION.md  DISTRIBUTED-META-VALIDATION-REPORT.md  DISTRIBUTED-REGISTRY-CREATION-REPORT.md  DLOCKS_INDEX.md  Dockerfile  Dockerfile.dev  Dockerfile.java26  EVENTSOURCING_IMPLEMENTATION.md  FACTORY_METHODS_REFACTORING.md  FAILOVER_MIGRATION_IMPL.md  (+87 more)
.claude/: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_PART4A.md  BENCHMARK-REPORTING-SUMMARY.md  HOOKS.md  INTEGRATION-PATTERNS.md  PLAN-MODE.md  SESSION-SUMMARY.md  SKILLS.md  SLA-PATTERNS.md  branch-validation-prompt.md  devops-checklist.md  gonogo-refactor-prompt.md  ralph-loop.local.md  settings.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
act-universal-template/: .actrc  (+6 more)
guard-system/: Cargo.toml
guard-system/src/: main.rs
tools/pattern-api-extractor/: Cargo.toml
tools/pattern-api-extractor/src/: main.rs
(+2693 files in other folders)
