[package]
name = "guard-system"
version = "0.1.0"
edition = "2024"
description = "Template-level quality guards for Java Maven projects"
authors = ["Claude Code"]
license = "Unlicense"

[[bin]]
name = "dx-guard"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
strip = true         # Strip symbols
