[package]
name = "pattern-api-extractor"
version = "0.1.0"
edition = "2021"
description = "Extracts Java pattern APIs and feeds them to ggen as template variables"
authors = ["ggen-pattern-generator"]

[[bin]]
name = "pattern-api-extractor"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# JSON serialization for ggen variable output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TOML output for ggen.toml variable files
toml = "0.8"
# Regex for Java source parsing
regex = "1"
# Directory walking
walkdir = "2"
# Colored terminal output
colored = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
